--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "serverStart": "nodemon server.js"
   },
   "author": "",
@@ -15,5 +15,9 @@
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
