--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,14 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21"
   },
   "devDependencies": {
+    "chai": "^5.0.0",
     "jest": "^29.7.0",
+    "mocha": "^10.2.0",
     "supertest": "^6.3.3"
   }
 }
